# site

./: .gitignore  Anchor.toml  README.md  deploy.sh  elm.json  package.json  publish.sh  tsconfig.json
deployment/: cloudfront.tf  route53.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
elm/src/: Main.elm
elm/src/Model/: AlmostExistingCollection.elm  AlmostNewCollection.elm  Collection.elm  CreatorMetadata.elm  Datum.elm  File.elm  Global.elm  Handle.elm  Mint.elm  Model.elm  State.elm  Wallet.elm  WithCollection.elm  WithCollections.elm
elm/src/Model/Collector/: Collector.elm  UnlockedModal.elm  WithCollection.elm  WithCollections.elm
elm/src/Model/Creator/: Creator.elm
elm/src/Msg/: Global.elm  Js.elm  Msg.elm
elm/src/Sub/: Sub.elm
elm/src/View/: Footer.elm  Header.elm  Hero.elm
it/: package-lock.json  package.json  rollup.config.js  sync-idl.sh
it/src/: Main.elm  dap.ts  index.js
programs/dap-cool/: Cargo.toml
programs/dap-cool/src/: error.rs  lib.rs
programs/dap-cool/src/ix/: add_new_copy_to_collection.rs  create_collection.rs  create_nft.rs  init_boss.rs  init_creator_metadata.rs  init_new_creator.rs  mint_new_copy.rs  mod.rs
programs/dap-cool/src/pda/: authority.rs  boss.rs  collector.rs  creator.rs  handle.rs  mod.rs  verified.rs
web/: index.html
web/js/: main.js  package-lock.json  package.json  response.json  sync-idl.sh
web/js/anchor/: config.ts  idl.ts
web/js/phantom/: index.js
web/js/shdw/: shdw.js  shdw.ts
web/js/util/: blob-util.ts  read-image.ts
web/sass/: custom.scss  package-lock.json
(+77 files in other folders)
