[package]
name = "dap-cool"
version = "1.0.0"
description = "nft token-gating launchpad"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dap_cool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
mpl-token-metadata = { version = "1.6.1", features = ["no-entrypoint"] }
